Mensaje descriptivo de los cambios

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             
                 <p> <i class="fa-solid fa-check"></i>Asesoría Personalizada: Nuestro equipo está dispuesto a brindarte asesoría personalizada para adaptar nuestros servicios a tus necesidades específicas.</p>
 
-                <p> <i class="fa-solid fa-check"></i>Servicio de Pipas de Agua por Volumen: Ponemos a tu disposición un servicio de renta de pipas de agua con distintas capacidades para satisfacer tus necesidades de abastecimiento, desde pequeñas entregas hasta grandes volúmenes.</p>
+                <p> <i class="fa-solid fa-check"></i>Servicio de Pipas de Agua por Volumen: Ponemos a tu disposición un servicio de entrega de agua con distintas capacidades para satisfacer tus necesidades de abastecimiento, desde pequeñas entregas hasta grandes volúmenes.</p>
 
 
 
